metadata/force-app/main/default/objects/Account/fields/ABM_Play__c.field-meta.xml
<CustomField>
    <fullName>ABM_Play__c</fullName>
    <label>ABM Play</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>G2</fullName>
            </value>
            <value>
                <fullName>Gartner Capterra</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>