metadata/force-app/main/default/objects/Account/fields/abRandom__c.field-meta.xml
<CustomField>
    <fullName>abRandom__c</fullName>
    <description>BO-1202 - Apex trigger assigns a random number.</description>
    <label>abRandom</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>