metadata/force-app/main/default/objects/Account/fields/account6Sense_Segmentation_Tier_1__c.field-meta.xml
<CustomField>
    <fullName>account6Sense_Segmentation_Tier_1__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BO-1292: Used for segmentation of 6sense account lists in salesforce.</description>
    <label>6Sense Segmentation - Tier 1</label>
    <type>Checkbox</type>
</CustomField>