metadata/force-app/main/default/objects/Account/fields/Account_Creation_Attribution__c.field-meta.xml
<CustomField>
    <fullName>Account_Creation_Attribution__c</fullName>
    <label>Account Creation Attribution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>G2</fullName>
            </value>
            <value>
                <fullName>Gartner Capterra</fullName>
            </value>
            <value>
                <fullName>RevenueBase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>