metadata/force-app/main/default/objects/Account/fields/Account_CSM_Owner_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_CSM_Owner_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>BODEV-4490: Used to store the manager of the CSM Owner on the account. This field is used in Catalyst and Thoughtspot.</description>
    <label>Account CSM Owner Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts5</relationshipName>
    <type>Lookup</type>
</CustomField>