metadata/force-app/main/default/objects/Account/fields/Account_Director__c.field-meta.xml
<CustomField>
    <fullName>Account_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>BODEV-1700 new &quot;Account Director&quot; field in SF</description>
    <label>Account Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>