metadata/force-app/main/default/objects/Account/fields/Account_ID_18_digits__c.field-meta.xml
<CustomField>
    <fullName>Account_ID_18_digits__c</fullName>
    <formula>casesafeid(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account ID (18 digits)</label>
    <type>Text</type>
</CustomField>