metadata/force-app/main/default/objects/Account/fields/Account_Information_Validated__c.field-meta.xml
<CustomField>
    <fullName>Account_Information_Validated__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if the account information is validated or not</inlineHelpText>
    <label>Account Information Validated</label>
    <type>Checkbox</type>
</CustomField>