metadata/force-app/main/default/objects/Account/fields/Account_Information_Validated_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Account_Information_Validated_Timestamp__c</fullName>
    <inlineHelpText>Timestamp when the account information validated is checked.</inlineHelpText>
    <label>Account Information Validated Timestamp</label>
    <type>DateTime</type>
</CustomField>