metadata/force-app/main/default/objects/Account/fields/Account_Owner_in_text__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_in_text__c</fullName>
    <description>Used in the Zendesk/SF sync</description>
    <formula>Owner.FirstName&amp;&quot; &quot;&amp;Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner in text</label>
    <type>Text</type>
</CustomField>