metadata/force-app/main/default/objects/Account/fields/account_owner_office__c.field-meta.xml
<CustomField>
    <fullName>account_owner_office__c</fullName>
    <formula>TEXT(Owner.Work_Location__c)</formula>
    <label>account owner office</label>
    <type>Text</type>
</CustomField>