metadata/force-app/main/default/objects/Account/fields/Account_Owner_Office_Grouped__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Office_Grouped__c</fullName>
    <formula>CASE(account_owner_office__c, 
&quot;Amsterdam&quot;, &quot;EMEA&quot;, 
&quot;London&quot;, &quot;EMEA&quot;,
&quot;Dubai&quot;, &quot;EMEA&quot;,
&quot;Boston&quot;, &quot;US&quot;,
&quot;San Mateo&quot;, &quot;US&quot;,
&quot;San Carlos&quot;, &quot;US&quot;,
&quot;Melbourne&quot;, &quot;APAC&quot;,
&quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner Office Grouped</label>
    <type>Text</type>
</CustomField>