metadata/force-app/main/default/objects/Account/fields/Account_Setup__c.field-meta.xml
<CustomField>
    <fullName>Account_Setup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Setup</label>
    <type>Checkbox</type>
</CustomField>