metadata/force-app/main/default/objects/Account/fields/Account_Setup_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Setup_Date__c</fullName>
    <label>Account Setup Date</label>
    <type>Date</type>
</CustomField>