metadata/force-app/main/default/objects/Account/fields/Account_summary_notes__c.field-meta.xml
<CustomField>
    <fullName>Account_summary_notes__c</fullName>
    <label>Account summary / notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>