metadata/force-app/main/default/objects/Account/fields/Account_Trigger_6sense__c.field-meta.xml
<CustomField>
    <fullName>Account_Trigger_6sense__c</fullName>
    <description>Used to segment accounts based on 6sense data. It is also used to tweak our messaging for outreach to get a better connect rate. Populated from RingLead.</description>
    <label>Account Trigger - 6sense</label>
    <length>255</length>
    <type>Text</type>
</CustomField>