metadata/force-app/main/default/objects/Account/fields/Account_Usage_Billing_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Account_Usage_Billing_Relationship__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BODEV-1451: Checkbox field to indicate why the Account was created.</description>
    <inlineHelpText>If this Account is created for financial purpose (representing a billing entity of the customer, etc.), tick this field.</inlineHelpText>
    <label>Account Usage - Billing Relationship</label>
    <type>Checkbox</type>
</CustomField>