metadata/force-app/main/default/objects/Account/fields/accountIntentScore6sense_Bynder__c.field-meta.xml
<CustomField>
    <fullName>accountIntentScore6sense_Bynder__c</fullName>
    <description>A measure, between 0 and 100, of how much an account is behaving like accounts with which there is a history of previously opened opportunities.</description>
    <label>6sense Account Intent Score Bynder</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>