metadata/force-app/main/default/objects/Account/fields/accountReachScore6sense_Bynder__c.field-meta.xml
<CustomField>
    <fullName>accountReachScore6sense_Bynder__c</fullName>
    <description>A measure of current outreach activities against optimal quality, quantity, and diversity of outreach activities as defined by your company’s historical success on won opportunities. Outbound calls, both marketing and sales emails are analyzed for this measure.</description>
    <label>6sense Account Reach Score Bynder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>