metadata/force-app/main/default/objects/Account/fields/accountUpdateDate6sense_Bynder__c.field-meta.xml
<CustomField>
    <fullName>accountUpdateDate6sense_Bynder__c</fullName>
    <description>The latest update date and time when 6sense Scores were updated.</description>
    <label>6sense Account Update Date Bynder</label>
    <type>Date</type>
</CustomField>