metadata/force-app/main/default/objects/Account/fields/Active_User_BDR_Owner__c.field-meta.xml
<CustomField>
    <fullName>Active_User_BDR_Owner__c</fullName>
    <description>BODEV-2448 New Salesforce field: &quot;Active User BDR Owner&quot;</description>
    <formula>IF(BDR_Owner__c = $User.Id , 1 , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active User BDR Owner</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>