metadata/force-app/main/default/objects/Account/fields/Active_User_Owner__c.field-meta.xml
<CustomField>
    <fullName>Active_User_Owner__c</fullName>
    <description>BODEV-1888: Return TRUE when the current Owner is specified in any of the User Lookup field, else FALSE.</description>
    <formula>CASE( $User.Id ,
  OwnerId, 1,
  BDR_Owner__c, 1,
  Account_Director__c, 1,
  Adoption_CSM__c, 1,
  BDR_Owner__c, 1,
  CSM_Owner__c, 1,
  New_Business_Sales_Rep__c, 1,
  New_Business_Solutions_Owner__c, 1,
  0
) = 1</formula>
    <inlineHelpText>Returns TRUE if you are specified in any of the user lookup fields (Account Owner, CSM Owner, etc.).</inlineHelpText>
    <label>Active User Owner</label>
    <type>Checkbox</type>
</CustomField>