metadata/force-app/main/default/objects/Account/fields/Add_ons__c.field-meta.xml
<CustomField>
    <fullName>Add_ons__c</fullName>
    <label>Add ons</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Additional Brands</fullName>
            </value>
            <value>
                <fullName>Additional Storage</fullName>
            </value>
            <value>
                <fullName>Archival Storage</fullName>
            </value>
            <value>
                <fullName>Webdam Connector for Creative Cloud User Licenses</fullName>
            </value>
            <value>
                <fullName>Webdam Connector for Salesforce</fullName>
            </value>
            <value>
                <fullName>Webdam Connector for Sitecore</fullName>
            </value>
            <value>
                <fullName>Webdam Dynamic Templates</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>