metadata/force-app/main/default/objects/Account/fields/Add_ons_Users__c.field-meta.xml
<CustomField>
    <fullName>Add_ons_Users__c</fullName>
    <label>Add ons; Users</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Distributors</fullName>
            </value>
            <value>
                <fullName>Retailers</fullName>
            </value>
            <value>
                <fullName>Creatives</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Sales Team</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>