metadata/force-app/main/default/objects/Account/fields/Add_ons_Workflow__c.field-meta.xml
<CustomField>
    <fullName>Add_ons_Workflow__c</fullName>
    <label>Add ons; Workflow</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>