metadata/force-app/main/default/objects/Account/fields/Additional_Customer_Notice_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Additional_Customer_Notice_Email_Address__c</fullName>
    <description>Additional email address for customer notices.</description>
    <inlineHelpText>Additional email address for customer notices.</inlineHelpText>
    <label>Additional Customer Notice Email Address</label>
    <type>Email</type>
</CustomField>