metadata/force-app/main/default/objects/Account/fields/Additional_Modules_Total__c.field-meta.xml
<CustomField>
    <fullName>Additional_Modules_Total__c</fullName>
    <formula>Has_Digital_Brand_Templates_Advanced__c +  Has_Digital_Brand_Templates__c +  Has_Brand_Guidelines__c +  Has_Brand_Guidelines_Advanced__c +  Has_creative_workflow__c +  Has_Video_Brand_Studio__c +  Has_Video_Brand_Studio_Advanced__c +  Has_Brand_Templates__c +  Has_Advanced_Analytics__c +  Has_Analytics__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Additional Modules Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>