metadata/force-app/main/default/objects/Account/fields/Adoption_CSM__c.field-meta.xml
<CustomField>
    <fullName>Adoption_CSM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CSM owner who is part of the Success Squad but was involved in the implementation of the customer from the start.</description>
    <inlineHelpText>CSM owner who is part of the Success Squad but was involved in the implementation of the customer from the start.</inlineHelpText>
    <label>Adoption CSM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Adoption_CSM</relationshipName>
    <type>Lookup</type>
</CustomField>