metadata/force-app/main/default/objects/Account/fields/AI_Functionalities__c.field-meta.xml
<CustomField>
    <fullName>AI_Functionalities__c</fullName>
    <description>BODEV-2792 New SF Field(s) AWS Rekognition &amp; DPA Legal
BO-2125: Name change requested from “AI Functionalities“ to “Face Recognition Opt-in/out“</description>
    <inlineHelpText>Select opt-in: when customer provides written statement confirming they would like to use Face Recognition. Select opt-out: when customer expresses they would not like to use Face Recognition. (Email and checkbox sufficient).</inlineHelpText>
    <label>Face Recognition Opt-in/out</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opt-in</fullName>
            </value>
            <value>
                <fullName>Opt-out</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>