metadata/force-app/main/default/objects/Account/fields/Apollo_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Apollo_Revenue__c</fullName>
    <description>BO-2220 Additional revenue fields on the Lead and Account objects</description>
    <inlineHelpText>Annual revenue number enriched by Apollo (only available in USD)</inlineHelpText>
    <label>Apollo Revenue</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>