metadata/force-app/main/default/objects/Account/fields/Arbitration_Clause__c.field-meta.xml
<CustomField>
    <fullName>Arbitration_Clause__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Arbitration Clause</label>
    <type>Checkbox</type>
</CustomField>