metadata/force-app/main/default/objects/Account/fields/Archival_Storage_GB_s__c.field-meta.xml
<CustomField>
    <fullName>Archival_Storage_GB_s__c</fullName>
    <label># of Archival Storage (GB&apos;s)</label>
    <summarizedField>Opportunity.Archival_Storage_GB__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.Contract_IsActive__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>