metadata/force-app/main/default/objects/Account/fields/AUP__c.field-meta.xml
<CustomField>
    <fullName>AUP__c</fullName>
    <description>Does the Acceptable Use Policy apply to Customer&apos;s Users? Is there a restricted use clause in the contract instead?</description>
    <inlineHelpText>Does the Acceptable Use Policy apply to Customer&apos;s Users? Is there a restricted use clause in the contract instead?</inlineHelpText>
    <label>AUP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AUP</fullName>
            </value>
            <value>
                <fullName>Restricted Use Clause (pre-v.13)</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Incorporated in v.14</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>