metadata/force-app/main/default/objects/Account/fields/Authentication_Integration__c.field-meta.xml
<CustomField>
    <fullName>Authentication_Integration__c</fullName>
    <label>Authentication Integration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Purchased</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>