metadata/force-app/main/default/objects/Account/fields/Authentication_Integration_Type__c.field-meta.xml
<CustomField>
    <fullName>Authentication_Integration_Type__c</fullName>
    <label>Authentication Integration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LDAP</fullName>
            </value>
            <value>
                <fullName>SAML 2.0</fullName>
            </value>
            <value>
                <fullName>Shibboleth</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>