metadata/force-app/main/default/objects/Account/fields/Auto_ICP__c.field-meta.xml
<CustomField>
    <fullName>Auto_ICP__c</fullName>
    <formula>IF(
AND(
OR(ISPICKVAL (Industry_Group__c, &quot;Technology&quot;),
ISPICKVAL (Industry_Group__c, &quot;Consumer Brands&quot;),
ISPICKVAL (Industry_Group__c, &quot;Finance and Insurance&quot;),
ISPICKVAL (Industry_Group__c, &quot;Healthcare&quot;),
ISPICKVAL (Industry_Group__c, &quot;Industrials&quot;)),

OR(ISPICKVAL(Company_Size_New__c, &quot;Mid-Market&quot;),
ISPICKVAL(Company_Size_New__c, &quot;MM - Small&quot;), 
ISPICKVAL(Company_Size_New__c, &quot;MM - Large&quot;),
ISPICKVAL(Company_Size_New__c, &quot;Enterprise&quot;), 
ISPICKVAL(Company_Size_New__c, &quot;Strategic&quot;),
ISPICKVAL(Company_Size_New__c, &quot;Micro&quot;))
),

TRUE, FALSE)</formula>
    <label>Auto ICP</label>
    <type>Checkbox</type>
</CustomField>