metadata/force-app/main/default/objects/Account/fields/Automatic_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Automatic_Renewal__c</fullName>
    <label>Automatic Renewal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>