metadata/force-app/main/default/objects/Account/fields/AWS_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>AWS_Account_ID__c</fullName>
    <description>BODEV-4006
Requested by the partnerships team to support Bynder’s partnership with AWS</description>
    <label>AWS Account ID</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>