metadata/force-app/main/default/objects/Account/fields/AWS_Marketplace_Engagement__c.field-meta.xml
<CustomField>
    <fullName>AWS_Marketplace_Engagement__c</fullName>
    <description>BODEV-4006
Requested by the partnerships team to support Bynder’s partnership with AWS</description>
    <label>AWS Marketplace Engagement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>