metadata/force-app/main/default/objects/Account/fields/BAA__c.field-meta.xml
<CustomField>
    <fullName>BAA__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Did we sign a Business Associate Agreement?</inlineHelpText>
    <label>BAA</label>
    <type>Checkbox</type>
</CustomField>