metadata/force-app/main/default/objects/Account/fields/BDR_Owner__c.field-meta.xml
<CustomField>
    <fullName>BDR_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>BODEV-1888: Lookup field to specify BDR responsible for the Account</description>
    <label>BDR Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BDROwner</relationshipName>
    <type>Lookup</type>
</CustomField>