metadata/force-app/main/default/objects/Account/fields/Bill_to_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Contact_Email__c</fullName>
    <description>What email address should billing information be sent to?</description>
    <inlineHelpText>What email address should billing information be sent to?</inlineHelpText>
    <label>Bill to Contact Email</label>
    <type>Email</type>
</CustomField>