metadata/force-app/main/default/objects/Account/fields/Bill_to_Contact_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Contact_Last_Name__c</fullName>
    <description>Who should billing information be sent to?</description>
    <inlineHelpText>Who should billing information be sent to?</inlineHelpText>
    <label>Bill to Contact Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>