metadata/force-app/main/default/objects/Account/fields/Billing_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account_Name__c</fullName>
    <description>If billing entity is different to the account name.</description>
    <inlineHelpText>Fill in legal billing entity name</inlineHelpText>
    <label>Billing Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>