metadata/force-app/main/default/objects/Account/fields/Billing_Address_SpotDraft__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_SpotDraft__c</fullName>
    <description>Created this field to fix the display format of billing address on the order form template - SpotDraft</description>
    <formula>BLANKVALUE(BillingStreet,&quot;&quot;) &amp;
IF(ISBLANK(BillingCity),&quot;&quot;, &quot;,&quot;) &amp;
IF(ISBLANK(BillingCity),&quot;&quot;,&quot; &quot;) &amp;
BLANKVALUE(BillingCity, &quot;&quot;) &amp;
IF(ISBLANK(BillingState),&quot;&quot;,&quot;,&quot;) &amp;
IF(ISBLANK(BillingState),&quot;&quot;,&quot; &quot;) &amp;
BLANKVALUE(BillingState, &quot;&quot;) &amp;
IF(ISBLANK(BillingPostalCode),&quot;&quot;, &quot;,&quot;) &amp;
IF(ISBLANK(BillingPostalCode),&quot;&quot;,&quot; &quot;) &amp;
BLANKVALUE(BillingPostalCode, &quot;&quot;) &amp;
IF(ISBLANK(BillingCountry),&quot;&quot;,&quot;,&quot;) &amp;
IF(ISBLANK(BillingCountry),&quot;&quot;,&quot; &quot;) &amp;
BLANKVALUE(BillingCountry, &quot;&quot;)</formula>
    <label>SpotDraft Billing Address</label>
    <type>Text</type>
</CustomField>