metadata/force-app/main/default/objects/Account/fields/Billing_cc_email__c.field-meta.xml
<CustomField>
    <fullName>Billing_cc_email__c</fullName>
    <description>Used in addition to the Bill to Contact Email address.</description>
    <inlineHelpText>Used in addition to the Bill to Contact Email address.</inlineHelpText>
    <label>Billing cc email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>