metadata/force-app/main/default/objects/Account/fields/Billing_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Billing_Phone_Number__c</fullName>
    <description>BODEV-1323: Billing Phone Number of the customer. Can be filled through Customer Onboarding Form feature.</description>
    <label>Billing Phone Number</label>
    <type>Phone</type>
</CustomField>