metadata/force-app/main/default/objects/Account/fields/bizible2__Engagement_Score__c.field-meta.xml
<CustomField>
    <fullName>bizible2__Engagement_Score__c</fullName>
    <description>Bizible&apos;s predictive metric using historical data to indicate how engaged an account is</description>
    <inlineHelpText>Bizible&apos;s predictive metric using historical data to indicate how engaged an account is</inlineHelpText>
    <label>Predictive Engagement Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>