metadata/force-app/main/default/objects/Account/fields/Brand_Connect__c.field-meta.xml
<CustomField>
    <fullName>Brand_Connect__c</fullName>
    <description>wd field</description>
    <label>Brand Connect</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brand Connect Basic</fullName>
            </value>
            <value>
                <fullName>Brand Connect Basic - Unlimited Assets</fullName>
            </value>
            <value>
                <fullName>Brand Connect Plus - Professional Edition</fullName>
            </value>
            <value>
                <fullName>Brand Connect Plus - Enterprise Edition</fullName>
            </value>
            <value>
                <fullName>Brand Connect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>