metadata/force-app/main/default/objects/Account/fields/Brand_Connect_Workflow__c.field-meta.xml
<CustomField>
    <fullName>Brand_Connect_Workflow__c</fullName>
    <label>Brand Connect; Workflow</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>