metadata/force-app/main/default/objects/Account/fields/Budget_Process__c.field-meta.xml
<CustomField>
    <fullName>Budget_Process__c</fullName>
    <description>Information about the budget process of the account</description>
    <inlineHelpText>Information about the budget process of the account</inlineHelpText>
    <label>Budget Process</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>