metadata/force-app/main/default/objects/Account/fields/Bynder_Analytics_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Bynder_Analytics_Enabled__c</fullName>
    <description>If Bynder analytics is enabled on the customers portal, is it the basic or advanced version?</description>
    <inlineHelpText>If Bynder analytics is enabled on the customers portal, is it the basic or advanced version?</inlineHelpText>
    <label>Bynder Analytics Enabled</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
            <value>
                <fullName>Opted-out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>